--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,18 +11,20 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.1.0
   cupertino_icons: ^1.0.6
+  flutter_animate: ^4.5.0
+  confetti: ^0.7.0
   # 👇 THIS IS THE CRITICAL UPDATE
   google_generative_ai: ^0.4.6 
-  firebase_core: ^3.1.0
-  firebase_auth: ^5.1.0
-  cloud_firestore: ^5.0.1
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
   image_picker: ^1.1.1
   http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
