--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_animate: ^4.5.0
   confetti: ^0.7.0
-  # 👇 THIS IS THE CRITICAL UPDATE
+  model_viewer_plus: ^1.7.0
   google_generative_ai: ^0.4.6 
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
@@ -28,6 +28,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/astronaut.glb
 
 dependency_overrides:
   google_generative_ai: ^0.4.6
