--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   cloud_firestore: ^6.1.1
   image_picker: ^1.1.1
   http: ^1.6.0
+  camera: ^0.10.5
+  google_mlkit_object_detection: ^0.11.0
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -28,8 +31,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/astronaut.glb
 
+  # 👇 2 spaces indentation
+  assets:
+    # 👇 4 spaces indentation
+    - assets/model.glb
 dependency_overrides:
   google_generative_ai: ^0.4.6
