--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   image_picker: ^1.1.1
   http: ^1.6.0
   camera: ^0.10.5
-  google_mlkit_object_detection: ^0.11.0
+  google_mlkit_object_detection: ^0.15.0
+  google_mlkit_commons: ^0.11.0
   permission_handler: ^11.0.0
 
 dev_dependencies:
