--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
   camera: ^0.10.5
   google_mlkit_object_detection: ^0.15.0
   google_mlkit_commons: ^0.11.0
-
+  
+  #Location
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
