--- a/firebase.json
+++ b/firebase.json
@@ -1,37 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "carbon-shadow-tracker",
-          "appId": "1:973108526550:android:df1b27f5dc47602628f877",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "carbon-shadow-tracker",
-          "configurations": {
-            "android": "1:973108526550:android:df1b27f5dc47602628f877",
-            "web": "1:973108526550:web:d365b74eb60d209328f877",
-            "windows": "1:973108526550:web:2686f6c6c4f49a1b28f877"
-          }
-        }
-      }
-    }
-  },
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"carbon-shadow-tracker-db297","appId":"1:312487021634:android:c1fb41ae10ebc597a831db","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"carbon-shadow-tracker-db297","configurations":{"android":"1:312487021634:android:c1fb41ae10ebc597a831db","ios":"1:312487021634:ios:ddd7fdb3d1b4f9c4a831db","macos":"1:312487021634:ios:ddd7fdb3d1b4f9c4a831db","web":"1:312487021634:web:05acf4582305ee88a831db","windows":"1:312487021634:web:15a85c2de499147ba831db"}}},"ios":{"default":{"projectId":"carbon-shadow-tracker-db297","appId":"1:312487021634:ios:ddd7fdb3d1b4f9c4a831db","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"carbon-shadow-tracker-db297","appId":"1:312487021634:ios:ddd7fdb3d1b4f9c4a831db","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}}}},"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]}}
