--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>NSCameraUsageDescription</key>
     <string>This app requires camera access to detect shadows via AR.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This app needs your location to calculate accurate sun positioning even when the app is in the background.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs your location to calculate accurate sun positioning even when the app is in the background.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>This app needs your location to calculate accurate sun positioning.</string>
 	<key>CFBundleDevelopmentRegion</key>
